<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:fontFamily="@font/font">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pine"
        android:scaleType="centerCrop"/>
    <ImageView
        android:layout_marginTop="100dp"
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/pine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/pine"
        android:textColor="#291600"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pine"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/house"
        android:textColor="#291600"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/house"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/studio"
        android:textColor="#291600"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_margin="10dp">
    <TextView
        android:fontFamily="@font/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timofey_techno"
                android:layout_weight="1"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anton_rodex"
                android:layout_weight="1"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mikhail_mishka2003"
                android:layout_weight="1"
                android:textColor="#000"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>