<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fontFamily="@font/font">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pine"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/font"
        android:padding="5dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/hello_world"
            android:textColor="#291600"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"

        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <Button
            android:id="@+id/control"
            android:fontFamily="@font/font"
            android:textStyle=""
            android:layout_margin="3dp"
            android:textSize="30sp"
            android:background="@drawable/my_button"
            android:layout_width="match_parent"
            android:text="@string/ControlPanel"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/settings"
            android:fontFamily="@font/font"
            android:layout_margin="3dp"
            android:textSize="30sp"
            android:background="@drawable/my_button"
            android:layout_width="match_parent"
            android:text="@string/Settings"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/about"
            android:fontFamily="@font/font"
            android:layout_margin="3dp"
            android:textSize="30sp"
            android:background="@drawable/my_button"
            android:layout_width="match_parent"
            android:text="@string/About"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>